# ClickHouse

contrib/: CMakeLists.txt
contrib/libbsc-cmake/: CMakeLists.txt
programs/compressor/: Compressor.cpp
src/: CMakeLists.txt
src/Compression/: CompressionCodecBSC.cpp  CompressionFactory.cpp  CompressionInfo.h
src/Core/: Settings.h
